[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphmind"
version = "0.0.1"
description = "GraphMind: graph-based memory and retrieval for LLM agents"
readme = "README.md"
authors = [{ name = "Mihir Mishra" }]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "memory", "graph", "agents", "retrieval"]
# dependencies = [
#   "jericho>=3.0.0",
# ]

[project.urls]
Homepage = "https://github.com/your-org/graphmind"
Repository = "https://github.com/your-org/graphmind"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["graphmind*"]

[tool.setuptools.package-data]
# "graphmind" = ["py.typed", "**/*.txt", "**/*.json"]
